--- a/src/main/webapp/resources/css/header.css
+++ b/src/main/webapp/resources/css/header.css
@@ -1,20 +1,29 @@
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  
+  height: 75px;
+  padding: 1rem;
+  color: white;
+  background: teal;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-header {  
-    height: 75px;
-    padding: 1rem;
-    color: white;
-    background: teal;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  
-  h1, p {
-    margin: 0;
-  }
-  
-  main {
-    padding: 1rem;
-    height: 100%;  
-  }
+body {
+  padding-top: 75px;
+  background: #EEE;
+}
+
+/* 길이 */
+body, html {
+  height: 200%;
+}
+/* 배너 세로길이 */
+* {
+  box-sizing: border-box;
+}
