도서 상세정보 구현 및 이력프론트

--- a/src/main/webapp/resources/css/board_detail.css
+++ b/src/main/webapp/resources/css/board_detail.css
@@ -1,6 +1,6 @@
 :root {
 	--primary-color: #2563eb;
-	--secondary-color: #475569;
+	--secondary-color: #ff0000;
 	--accent-color: #8ba3d9;
 	--light-color: #f8fafc;
 	--dark-color: #1e293b;
