--- a/src/main/webapp/resources/css/mypage.css
+++ b/src/main/webapp/resources/css/mypage.css
@@ -1,5 +1,5 @@
         :root {
-            --primary-color: #4a6da7;
+            --primary-color: #2563EB;
             --secondary-color: #6384c5;
             --accent-color: #8ba3d9;
             --light-color: #e8edf7;
